# python-igraph

./: .all-contributorsrc  .dockerignore  .git_archival.json  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTORS.md  MANIFEST.in  Makefile  README.md  appveyor.yml  bootstrap.sh  cairo_layout.pickle  pyproject.toml  setup.py  test.sh  tox.ini  warnings_converted_to_errors.py
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
ci/: install_foreign_graph_packages.py
doc/: Makefile
docker/: manylinux.docker
etc/: arith_apple_m1.h  lsan-suppr.txt
igraph/: __init__.py  clustering.py  compat.py  configuration.py  formula.py  summary.py  utils.py
scripts/: build_igraph.bat  build_igraph.sh  doctests.py  epydoc.cfg  fix_pyodide_build.py  fixup_centos_7_in_ci.sh  mkdoc.sh  patch-pydoctor.sh  patch_modularized_graph_methods.py  pydoctor-21.12.0.patch  pydoctor-21.2.2.patch  pydoctor-21.2.2_sphinx_ext.patch  release-osx.sh  rtd_prebuild.sh
src/: attributes.c  common.c  convert.c  convert.h  edgeobject.c  edgeseqobject.c  error.c  filehandle.c  graphobject.c  graphobject.h  py2compat.h  pyhelpers.c  pyhelpers.h  vertexobject.c  vertexseqobject.c
test/: doctests.py  unittests.py
tests/: conftest.py  test_atlas.py  test_attributes.py  test_basic.py  test_bipartite.py  test_cliques.py  test_coloring.py  test_colortests.py  test_conversion.py  test_cycles.py  test_decomposition.py  test_edgeseq.py  test_flow.py  test_foreign.py  test_games.py  test_generators.py  test_homepage.py  test_rng.py  (+14 more)
(+532 files in other folders)
