[build-system]
requires = [
    "wheel",
    # pin setuptools:
    # https://github.com/airspeed-velocity/asv/pull/1426#issuecomment-2290658198
    "setuptools>=64,<72.2.0"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]
