[build-system]
requires = [
    # pin setuptools:
    # https://github.com/airspeed-velocity/asv/pull/1426#issuecomment-2290658198
    # Most likely cause:
    # https://github.com/pypa/distutils/issues/283
    # Workaround based on this commit:
    # https://github.com/harfbuzz/uharfbuzz/commit/9b607bd06fb17fcb4abe3eab5c4f342ad08309d7
    "setuptools>=64,<72.2.0; platform_python_implementation == 'PyPy'",
    "setuptools>=64; platform_python_implementation != 'PyPy'",
    "cmake>=3.18"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]
